--- a/Atividade 3/Atividade-12.html
+++ b/Atividade 3/Atividade-12.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício - 11</title>
+    <title>Exercício - 12</title>
 </head>
 <body>
     <script>
-    let n1 = 30
-    let n2 = 1
-    for (let i= n1; i >= n2; i--) {
-        let div = 0
-        for(let a = 2; a < i ; a++){
-            if (i%a==0){
-                div=1;
-                break;
-            }
-        }
-        if (i > 1 && div == 0) {
-        document.write('['+ i +']..');
-        }
-        else{
-            document.write(i +'..')
+   /*Desenvolva um algoritmo que leia 10 números, calcule e escreva a
+média aritmética dos valores lidos, a quantidade de valores
+
+positivos, a quantidade de valores negativos e o percentual de
+valores negativos e positivos.*/
         }
     }
     </script>
